<resources>
    <string name="app_name">本地视频</string>
    <string name="loacl">本地</string>
    <string name="history">历史记录</string>
    <string name="delete_all">全部删除</string>
    <string name="imports">导入</string>
    <string name="exports">导出</string>
    <string name="view_all">查看全部</string>
    <string name="now_time">当前时长</string>
    <string name="total_time">总时长</string>
    <string name="info">详情</string>
    <string name="info_size">文件大小</string>
    <string name="video_number">视频数量</string>
    <string name="delete">删除</string>
    <string name="layout">布局</string>
    <string name="grid">网格</string>
    <string name="list">列表</string>
    <string name="movie_name">电影名</string>
    <string name="folder_name">文件夹名</string>
    <string name="online_link">在线视频</string>
    <string name="online_dialog_url">URL</string>
    <string name="play_current_time">播放时长</string>

    <string name="speed">倍速</string>
    <string name="audio_track">音频轨道</string>
    <string name="subtitle_track">字幕轨道</string>

    <string name="horizontal_layout">列表布局</string>

    <string name="id">标识符</string>
    <string name="title">标题</string>
    <string name="video_details">ID: %1$d\n标题: %2$s\n专辑: %3$s\n艺术家: %4$s\n显示名称: %5$s\nMIME 类型: %6$s\n路径: %7$s\n大小: %8$d\n时长: %9$d\n文件夹名称: %10$s</string>

    <string name="searchbar_hint">搜索</string>
    <string name="subtitle">字幕</string>

    <string name="settings">设置</string>
    <string name="total_settings">整体</string>
    <string name="total_tip">温馨提醒</string>
    <string name="total_tip_time">开屏时间问候语</string>
    <string name="total_tip_brightness">视频播放亮度提醒</string>
    <string name="total_theme">选择一个喜欢的模式吧！</string>
    <string name="total_auto">跟随系统</string>
    <string name="total_bright">亮色</string>
    <string name="total_dark">暗色</string>
    <string name="main_settings">主页</string>
    <string name="picture_main">为您的主页选一张好看的图片吧！</string>
    <string name="picture_main_button">点我选择</string>
    <string name="picture_main_button_default">恢复默认</string>
    <string name="main_settings_history">主页历史页</string>
    <string name="num_main_settings_history">展示记录数量</string>
    <string name="num_main_settings_history_tip">(切换后立即生效)</string>
    <string name="play_page">播放页</string>
    <string name="play_page_orientation">选择页面朝向</string>
    <string name="orientation_auto">跟随屏幕</string>
    <string name="orientation_horizontal">横屏</string>
    <string name="orientation_vertical">竖屏</string>
    <string name="about">关于</string>
    <string name="thanks">感谢您的使用！</string>
    <string name="github">github</string>
    <string name="lanzouyun">蓝奏云</string>
    <string name="version_text">当前版本：%1$s</string>

    <string name="title_activity_settings">SettingsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_history">HistoryActivity</string>

</resources>