<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/searchbar_menu_info"
        android:enabled="true"
        android:title="@string/info"
        android:icon="@drawable/info_fill0_wght400_grad0_opsz24"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/searchbar_menu_settings"
        android:enabled="true"
        android:title="@string/settings"
        android:icon="@drawable/settings_fill0_wght400_grad0_opsz32" />
    <item
        android:id="@+id/searchbar_menu_layout"
        android:enabled="true"
        android:title="@string/layout"
        android:icon="@drawable/space_dashboard_fill0_wght400_grad0_opsz32" />
</menu>