<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/main_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintlayout_top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/navigation_bottom">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/search_CoordinatorLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" >
            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/search_appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent">
                <com.google.android.material.search.SearchBar
                    android:id="@+id/search_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/searchbar_hint" />
            </com.google.android.material.appbar.AppBarLayout>
            <com.google.android.material.search.SearchView
                android:id="@+id/search_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/searchbar_hint"
                app:layout_anchor="@id/search_bar">
                <!-- Search suggestions/results go here (ScrollView, RecyclerView, etc.). -->
                <com.google.android.material.progressindicator.LinearProgressIndicator
                    android:id="@+id/search_LinearProgressIndicator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:indeterminate="true" />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/search_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior" />
            </com.google.android.material.search.SearchView>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <RelativeLayout
            android:id="@+id/main_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent" >

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/main_history_top_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/main_history_top_MaterialToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:menu="@menu/history_menu"
                    app:title="@string/history" />

            </com.google.android.material.appbar.AppBarLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/main_history_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/main_history_top_bar" />

        </RelativeLayout>

        <!-- fab -->
        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floating_action_button_online"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="16dp"
                android:contentDescription="@string/online_link"
                app:srcCompat="@drawable/link_fill0_wght400_grad0_opsz32"/>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- 底部栏 -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/navigation_rail_menu"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent" />


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/side_sheet_overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80000000"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/standard_side_sheet"
            style="@style/Widget.Material3.SideSheet"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior" >
            <include layout="@layout/slide_sheet_main"/>
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</RelativeLayout>